--- a/package.json
+++ b/package.json
@@ -8,27 +8,44 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@fullstacksjs/eslint-config": "^9.3.1",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.2.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "csstype": "^3.1.2",
     "eslint": "^8.38.0",
     "husky": "^8.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "react-helmet-async": "^1.3.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.1",
+    "vitest-dom": "^0.1.0"
+  },
+  "volta": {
+    "node": "16.19.0",
+    "npm": "9.6.6"
   }
 }
